--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
     "framer-motion": "^11.3.30",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.436.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
