--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "firebase": "^10.13.0",
+    "firebase": "^10.13.2",
     "framer-motion": "^11.3.30",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
@@ -36,12 +37,13 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
     "papaparse": "^5.4.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-google-places-autocomplete": "^4.1.0",
     "react-hook-form": "^7.53.0",
+    "react-query": "^3.39.3",
     "recharts": "^2.13.0-alpha.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
