--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.2.6",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
