--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.2",
+    "firebase-admin": "^12.6.0",
     "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "jspdf": "^2.5.1",
