Inventory post with shopify done

--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ FIREBASE_CLIENT_EMAIL=firebase-adminsdk-qv4d4@zippex-71294.iam.gserviceaccount.c
 NEXT_PUBLIC_SHOPIFY_API_KEY=f25170ce30b2b83a4360f6c15d2c6a4c
 SHOPIFY_SECRET=80f0c28411d08c75edfe3576cadf505e
 
-NEXT_PUBLIC_SHOPIFY_CLIENT_ID=da058359c4fce932088e978d0a5bc7f7
-SHOPIFY_CLIENT_SECRET=133c2a17f6b6d1783c8a5d9cd50e27b7
+NEXT_PUBLIC_SHOPIFY_CLIENT_ID=071f9a0a113571749ba8ffe1a9232411
+SHOPIFY_CLIENT_SECRET=7ded315fcd349c330a41374c1971d912
 NEXT_PUBLIC_SHOPIFY_REDIRECT_URI=https://merchant.zippex.app/api/shopify
-NEXT_PUBLIC_SHOPIFY_SCOPES=read_products
+NEXT_PUBLIC_SHOPIFY_SCOPES=write_products
+BASE_URL=https://221e-2001-569-5328-8600-ec27-6dca-66-7d2b.ngrok-free.app/
