--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
